--- a/day-4/index.html
+++ b/day-4/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Array Cardio 💪</title>
-</head>
-<body>
-  <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
-  <script>
 
-  </script>
+<style>
+    body {
+        background-image: url("https://cinthialandia.com/static/d7742b54d031d471c1d29516cc413c4c/ee604/arrays.png");
+        background-size: cover
+    }
+</style>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Array Cardio 💪</title>
+</head>
+
+<body>
+    <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
+
 </body>
+<script src="index.js" charset="utf-8"></script>
+
 </html>
